--- a/DecodeCollective/styles/projects.css
+++ b/DecodeCollective/styles/projects.css
@@ -27,6 +27,7 @@
 
 body {
     font-family: var(--font-family-description);
+    line-height: 1.5;
     background-color: var(--background-colour);
     margin: 0;
     height: 100vh;
@@ -135,8 +136,6 @@ input:focus,
 p {
     color: var(--text-colour);
     font-family: var(--font-family-description);
-    font-size: normal;
-    font-weight: 200;
 }
 
 p > a {
@@ -257,6 +256,7 @@ a {
     text-align: center;
     text-decoration: none;
     font-size: 14px;
+    font-weight: 400;
 }
 
 .menu a:hover {
@@ -319,11 +319,7 @@ a {
         margin-top: 2rem;
     }
 
-    .popup {
-        width: 100vw !important;
-        top: 20vh !important;
-        left: 0 !important;
-    }
+    
 }
 
 /*-------------------- SCROLLBAR --------------------*/
@@ -338,12 +334,12 @@ a {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: rgb(0, 0, 0);
-    border: 1px solid rgb(0, 0, 0);
+    background: rgb(196, 196, 196);
+    border: 1px solid rgb(196, 196, 196);
 }
 
 div {
-    scrollbar-color: black white;
+    scrollbar-color: rgb(196, 196, 196) white;
     scrollbar-width: thin;
     scrollbar-width: 6px;
 }
@@ -354,7 +350,7 @@ div {
 }
 
 ::-ms-scrollbar-thumb {
-    background: rgb(0, 0, 0);
+    background: rgb(196, 196, 196);
     /* border: 1px solid white; */
 }
 
@@ -465,33 +461,60 @@ li:hover .project-title {
 /* ------------------ POPUP --------------- */
 .popup {
     position: fixed;
-    top: 20vh;
-    left: 35vw;
-    width: 30vw;
-    height: 65vh;
-    min-width: 450px;
-    min-height: 450px;
+    top: 8vh;
+    left: 0;
+    margin-left: 10vw;
+    width: 80vw;
+    height: 88vh;
+    min-width: 600px;
+    min-height: 500px;
     background-color: var(--background-colour);
     z-index: 200;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    opacity: 0;
+    /* opacity: 0;
     transform: scale(0.6);
-    transition: opacity 250ms 250ms ease, transform 300ms 250ms ease;
+    transition: opacity 250ms 250ms ease, transform 300ms 250ms ease; */
 }
-.popup:focus, .popup:focus-visible{
-    opacity: 1;
-    transform: scale(1);  
+.popup:focus,
+.popup:focus-visible {
+    /* opacity: 1;
+    transform: scale(1);   */
     outline: none;
-    transition: opacity 250ms 250ms ease, transform 300ms 250ms ease; 
+    /* transition: opacity 250ms 250ms ease, transform 300ms 250ms ease;  */
 }
-.popup-container {
-    overflow-y: auto;
-    padding: 1em 3em;
+.popup-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 45%;
+}
+.project-popup {
+    display: grid;
+    grid-template-columns: 30% 40% 30%;
+    grid-template-rows: 55% 1fr;
+    /* grid-gap: 1rem; */
+    /* padding: 1em 5em 5em 5em; */
+    grid-auto-flow: dense;
+    position: relative;
+    height: 100%;
+    width: 100%;
 }
 .popup-content {
-    padding: 1em 3em;
+    display: flex;
+    align-items: flex-end;
+    grid-row: 1;
+    grid-column: 1;
+    padding-bottom: 15%;
+    display: flex;
+    justify-content: center;
+    /* padding-left: 1rem; */
+    /* padding: 5em 5em 0 5em;
+    height: 20%;
+    display: flex;
+    align-items: flex-end; */
 }
 .x-btn {
     position: absolute;
@@ -505,6 +528,7 @@ li:hover .project-title {
     border: none;
     background-size: cover;
     background-color: rgba(0, 0, 0, 0);
+    z-index: 200;
     /* mix-blend-mode: exclusion; */
 }
 .x-btn:active {
@@ -516,92 +540,85 @@ li:hover .project-title {
 }
 
 .popup-description {
+    grid-row: 2;
+    grid-column: 2;
     text-align: justify;
     padding-right: 1rem;
     font-weight: 400;
+    font-size: 0.8rem;
+    overflow-y: auto;
+}
+.popup-quote {
+    grid-row: 2;
+    grid-column: 1;
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
 }
 
 .popup-title {
     font-weight: 700;
-    font-size: 2em;
+    font-size: 3.5em;
     color: white;
-    margin-top: 20%;
+    margin-top: 0;
     /* mix-blend-mode: exclusion; */
 }
 mark {
     background-color: black;
     color: white;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
     .popup {
         min-width: 300px;
+        margin: 0;
+        width: 100vw;
+        top: 6em;
+        left: 0 !important;
+        /* height: 88vh !important; */
     }
+    
     .popup-description {
         font-size: small;
+        padding: 2rem;
+        background-color: white;
     }
 
     .projects-container {
         padding: 0;
     }
-}
 
-.modal {
-    position: fixed;
-    display: block;
-    display: -ms-flexbox;
+    .project-title {
+        opacity: 1;
+    }
+
+    .project-popup {
+        display: block;
+        position: relative;
+        width: 100%;
+        overflow-y: auto;
+    }   
+    
+    .popup-content {
+        padding-bottom: 0;
+    }
+
+    .popup-quote {
+        color: white;
+    }
+}
+.share-project {
+    grid-row: 2;
+    grid-column: 3;
     display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -ms-flex-pack: center;
-    justify-content: center;
-    margin: 0 auto;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 100;
-    overflow-x: hidden;
-    background-color: rgba(31, 32, 41, 0.75);
-    pointer-events: none;
-    opacity: 0;
-    transition: opacity 250ms 700ms ease;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding-right: 2rem;
+    padding-bottom: 2rem;
 }
-.modal-btn:checked ~ .modal {
-    pointer-events: auto;
-    opacity: 1;
-    transition: all 300ms ease-in-out;
-}
-.modal-wrap {
-    position: relative;
-    display: block;
-    width: 100%;
-    max-width: 400px;
-    margin: 0 auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    border-radius: 4px;
-    overflow: hidden;
-    padding-bottom: 20px;
-    background-color: #fff;
-    -ms-flex-item-align: center;
-    align-self: center;
-    box-shadow: 0 12px 25px 0 rgba(199, 175, 189, 0.25);
-    opacity: 0;
-    transform: scale(0.6);
-    transition: opacity 250ms 250ms ease, transform 300ms 250ms ease;
-}
-.modal-wrap img {
-    display: block;
-    width: 100%;
-    height: auto;
-}
-.modal-wrap p {
-    padding: 20px 30px 0 30px;
-}
-.modal-btn:checked ~ .modal .modal-wrap {
-    opacity: 1;
-    transform: scale(1);
-    transition: opacity 250ms 500ms ease, transform 350ms 500ms ease;
+.share-project p {
+    margin: 0;
+    font-size: 0.7rem;
 }
 
 .logo {
@@ -623,7 +640,6 @@ mark {
     filter: brightness(100%);
     transition: all 250ms linear;
 }
-
 @media screen and (max-width: 500px) {
     .modal-wrap {
         width: calc(100% - 40px);
@@ -631,5 +647,60 @@ mark {
     }
     .modal-wrap p {
         padding: 15px 20px 0 20px;
+    }
+}
+
+.share-project .fa {
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+    height: 1.5rem;
+    width: 1.5rem;
+    padding-top: 4px;
+    margin: 0.2rem;
+    font-size: large !important;
+}
+.share-project .fa:hover {
+    opacity: 0.7;
+}
+
+/* Facebook */
+.fa-facebook {
+    background: #3b5998;
+    color: white;
+}
+/* Twitter */
+.fa-twitter {
+    background: #55acee;
+    color: white;
+}
+
+/* ------------------ VIDEO --------------- */
+.video-parent {
+    grid-row: 1;
+    grid-column: 2;
+}
+[style*="--aspect-ratio"] > :first-child {
+    width: 100%;
+}
+[style*="--aspect-ratio"] > img {
+    height: auto;
+}
+@supports (--custom: property) {
+    [style*="--aspect-ratio"] {
+        position: relative;
+        align-self: end;
+    }
+    [style*="--aspect-ratio"]::before {
+        content: "";
+        display: block;
+        padding-bottom: calc(100% / (var(--aspect-ratio)));
+    }
+    [style*="--aspect-ratio"] > :first-child {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        align-self: flex-end;
+        height: 100%;
     }
 }
