--- a/DecodeCollective/styles/Style.css
+++ b/DecodeCollective/styles/Style.css
@@ -327,7 +327,7 @@ hr {
 }
 
 .mid-grid h1 {
-    text-shadow: 1px 1px rgb(37, 37, 37);
+    text-shadow: 2px 2px rgb(37, 37, 37);
 }
 .mid-grid h3 {
     text-shadow: 1px 1px rgb(37, 37, 37);
@@ -978,7 +978,7 @@ div {
     perspective: 30px;
     width: 100%;
     height: 100%;
-    background-color: black;
+    /* background-color: black; */
 }
 
 #inner {
@@ -995,7 +995,7 @@ div {
 /* mouse over - perspective on image */
 .demo-img {
     /* Photo by David Marcu on Unsplash */
-    background-image: url(../images/landingPage/about_pic.png);
+    background-image: url(../images/landingPage/landingPage.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
