--- a/DecodeCollective/styles/contact.css
+++ b/DecodeCollective/styles/contact.css
@@ -193,7 +193,7 @@ a {
     text-decoration: none;
     font-weight: bold;
     font-size: xx-large;
-    margin: 2rem 0;
+    /* margin: 2rem 0; */
     transition: background-size 0.2s;
 }
 
