--- a/DecodeCollective/styles/about.css
+++ b/DecodeCollective/styles/about.css
@@ -42,7 +42,7 @@
           justify-content: space-between;
   z-index: 3;
   padding: 1rem;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.685);
   position: fixed;
 }
 
@@ -1344,4 +1344,122 @@ img {
   -o-object-fit: cover;
      object-fit: cover;
 }
-/*# sourceMappingURL=style.css.map */
+
+.main-container {
+  padding-top: calc(max(5vw, 5em) + 5rem);
+  background: url("../images/urbanGrowth/Picture3.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.brand-title,
+.brand-subtitle {
+  text-shadow: 2px 2px #252525;
+}
+
+.content {
+  color: white !important;
+  padding: 2vh 10vw 2vh 10vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  z-index: 10;
+}
+
+.content h2 {
+  font-size: 2.5vw;
+}
+
+.coloured-title {
+  color: whitesmoke;
+  font-size: 3vw;
+}
+
+canvas {
+  position: absolute;
+  top: 0;
+}
+
+.slide-top-start {
+  -webkit-animation: slide-top 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: slide-top 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+.slide-top-slow {
+  -webkit-animation: slide-top 3s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: slide-top 3s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+/**
+ * ----------------------------------------
+ * animation slide-top
+ * ----------------------------------------
+ */
+@-webkit-keyframes slide-top-start {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(70px);
+    transform: translateY(70px);
+  }
+  100% {
+    opacity: 0.5;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes slide-top-start {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(70px);
+    transform: translateY(70px);
+  }
+  100% {
+    opacity: 0.5;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes slide-top {
+  0% {
+    -webkit-transform: translateY(70px);
+    transform: translateY(70px);
+  }
+  50% {
+    -webkit-transform: translateY(70px);
+    transform: translateY(70px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes slide-top {
+  0% {
+    -webkit-transform: translateY(70px);
+    transform: translateY(70px);
+  }
+  50% {
+    -webkit-transform: translateY(70px);
+    transform: translateY(70px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+/*# sourceMappingURL=about.css.map */
