--- a/DecodeCollective/styles/contact.css
+++ b/DecodeCollective/styles/contact.css
@@ -1,413 +1,623 @@
-:root {
-    --background-colour: rgb(255, 255, 255);
-    --background-colour-dark: rgb(25, 27, 27);
-    --mainColor: #0059ff;
-    --highlight-colour: rgb(177, 177, 177);
-    --section-background: #f2f2f2;
-    --creation-colour: yellow;
-    --modification-colour: lightgray;
-    --deletion-colour: red;
-    /* --colour-link: lightgray; */
-    --colour-link: rgb(90, 90, 90);
-    --color-link-hover: rgb(163, 163, 163);
-    --button-border: 0.2rem;
-    --input-border: 0.1rem;
-    --light-border: 0.05rem;
-    --text-colour: rgb(0, 0, 0);
-    /* --text-colour: rgb(255, 255, 255); */
-    --font-family-title: "Montserrat", sans-serif;
-    --font-family-subtitle: "Montserrat", sans-serif;
-    --font-family-button: "Montserrat", sans-serif;
-    --font-family-input: "Montserrat", sans-serif;
-    --font-family-description: "Montserrat", sans-serif;
-    --font-size-button: 0.7rem;
-    --offset: 1rem;
+/*-------------------- NAVIGATION MENU --------------------*/
+#siteNav ul {
+  text-align: right;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+#siteNav ul li {
+  display: inline;
+}
+
+#siteNav ul li a {
+  margin-left: 10px;
+  padding: 8px 15px;
+  color: #5a5a5a;
+  /* color: $color-link); */
+  text-decoration: none;
+  /* text-transform: uppercase; */
+  font-size: 1em;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  /* border: 1px solid $color-link); */
+}
+
+#siteNav ul li a:hover {
+  background: #5a5a5a;
+  color: #a3a3a3;
+}
+
+#siteNav ul li a.active {
+  border-bottom: thin;
+}
+
+.navbar {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  z-index: 3;
+  padding: 1rem;
+  background-color: white;
+  position: fixed;
+}
+
+.logo {
+  width: 5vw;
+  height: 5vw;
+  padding: 0.5rem;
+  border: 1px solid black;
+  /* margin-left: 1rem; */
+  min-height: 5em;
+  min-width: 5em;
+  max-width: 7em;
+  max-height: 7em;
+}
+
+.logo-w {
+  border: 1px solid white;
+}
+
+.logo img {
+  width: 80px;
+  margin-left: 20px;
+}
+
+.menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  /* align-items: center; */
+  overflow: hidden;
+  /* flex-grow: 1; */
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.menu a {
+  margin: 0 20px;
+  padding: 0 10px;
+  float: left;
+  display: block;
+  color: #5a5a5a;
+  text-align: center;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.menu a:hover {
+  color: #a3a3a3;
+}
+
+.menu a.active {
+  text-decoration: underline;
+}
+
+.menu .icon {
+  display: none;
+  margin: 0;
+}
+
+@media screen and (max-width: 600px) {
+  .menu a {
+    display: none;
+  }
+  .menu a.icon {
+    float: right;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    /* background-color: $highlight-colour); */
+    width: 2rem;
+    height: 2rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .menu.responsive {
+    position: relative;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0 3rem 0 0;
+    margin-bottom: 1rem;
+  }
+  .menu.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 2rem;
+    height: 2rem;
+    margin-top: 1rem;
+  }
+  .menu.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+    height: auto;
+    margin: 0;
+  }
+  .menu.responsive a:not(:last-child) {
+    margin-top: 0.5rem;
+  }
+  .menu.responsive a:first-child {
+    margin-top: 2rem;
+  }
+}
+
+.nav-text {
+  color: white !important;
+}
+
+/*-------------------- SCROLLBAR --------------------*/
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: #ffffff;
+  /* border: 1px solid white; */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #8d8d8d;
+  border: 1px solid #8d8d8d;
+}
+
+div {
+  scrollbar-color: #8d8d8d white;
+  scrollbar-width: thin;
+  scrollbar-width: 6px;
+}
+
+::-ms-scrollbar-track {
+  background: #ffffff;
+  /* border: 1px solid white; */
+}
+
+::-ms-scrollbar-thumb {
+  background: #8d8d8d;
+  /* border: 1px solid white; */
 }
 
 /*-------------------- TAG STYLES --------------------*/
+.navbar {
+  position: relative !important;
+}
 
 body {
-    font-family: var(--font-family-description);
-    background-color: var(--background-colour);
-    margin: 0;
-    height: 100vh;
-    overflow-x: hidden;
+  font-family: "Montserrat", sans-serif;
+  background-color: white;
+  margin: 0;
+  height: 100vh;
+  overflow-x: hidden;
 }
+
 .body-restriction {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .scroll-container {
-    /* Always force (mandatory) scrolling to a snap point on the y-axis */
-    scroll-snap-type: y mandatory;
-    height: 100vh;
-    overflow-y: scroll;
-    overflow-x: hidden;
+  /* Always force (mandatory) scrolling to a snap point on the y-axis */
+  -ms-scroll-snap-type: y mandatory;
+      scroll-snap-type: y mandatory;
+  height: 100vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .scroll-item {
-    scroll-snap-align: start;
-    scroll-snap-stop: normal;
+  scroll-snap-align: start;
+  scroll-snap-stop: normal;
 }
 
 /* disable selection highlight */
-::selection {
-    color: none;
-    background: none;
+::-moz-selection {
+  color: none;
+  background: none;
 }
+::selection {
+  color: none;
+  background: none;
+}
+
 /* For Mozilla Firefox */
 ::-moz-selection {
-    color: none;
-    background: none;
+  color: none;
+  background: none;
 }
 
 section {
-    height: 100vh;
-    scroll-snap-align: center;
-    z-index: 1;
-    width: 100vw;
-    background-color: var(--background-colour);
+  height: 100vh;
+  scroll-snap-align: center;
+  z-index: 1;
+  width: 100vw;
+  background-color: white;
 }
 
 header {
-    display: flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 h1 {
-    font-family: var(--font-family-title);
-    color: var(--text-colour);
-    position: relative;
-    display: block;
-    margin: 0 0 0 0;
-    font-size: 4vw;
-    font-weight: 100;
-    letter-spacing: 0.1em;
-    z-index: 1;
-    /* text-shadow: 0px 1px 1px rgb(94, 94, 94); */
+  font-family: "Montserrat", sans-serif;
+  color: black;
+  position: relative;
+  display: block;
+  margin: 0 0 0 0;
+  font-size: 4vw;
+  font-weight: 100;
+  letter-spacing: 0.1em;
+  z-index: 1;
+  /* text-shadow: 0px 1px 1px rgb(94, 94, 94); */
 }
 
 h2 {
-    font-family: var(--font-family-title);
-    font-weight: 100;
-    color: var(--text-colour);
-    margin: 0;
-    margin-top: 2.5rem;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 100;
+  color: black;
+  margin: 0;
+  margin-top: 2.5rem;
 }
 
 h3 {
-    /* color: var(--colour-link); */
-    font-weight: bold;
-    font-family: var(--font-family-title);
-    margin: 0;
-    z-index: 2;
+  /* color: $color-link); */
+  font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+  z-index: 2;
 }
 
 h4 {
-    color: var(--colour-link);
-    font-weight: bolder;
-    font-size: 3rem;
-    font-family: var(--font-family-title);
-    margin: 0 15vw;
-    z-index: 2;
+  color: #5a5a5a;
+  font-weight: bolder;
+  font-size: 3rem;
+  font-family: "Montserrat", sans-serif;
+  margin: 0 15vw;
+  z-index: 2;
 }
 
 h5 {
-    margin: 0;
-    color: var(--color-link-hover);
-    font-size: 0.8rem;
-    font-weight: 100;
-    font-family: var(--font-family-subtitle);
-    margin-top: 5px;
+  margin: 0;
+  color: #a3a3a3;
+  font-size: 0.8rem;
+  font-weight: 100;
+  font-family: "Montserrat", sans-serif;
+  margin-top: 5px;
 }
 
 h6 {
-    margin: 0;
-    color: var(--colour-link);
-    font-size: 1rem;
-    font-weight: 100;
-    font-family: var(--font-family-subtitle);
+  margin: 0;
+  color: #5a5a5a;
+  font-size: 1rem;
+  font-weight: 100;
+  font-family: "Montserrat", sans-serif;
 }
 
 input:focus,
 .btn:focus {
-    outline: none;
+  outline: none;
 }
 
 p {
-    color: var(--text-colour);
-    font-family: var(--font-family-description);
-    font-size: normal;
-    font-weight: 200;
+  color: black;
+  font-family: "Montserrat", sans-serif;
+  font-size: normal;
+  font-weight: 200;
 }
 
 p > a {
-    font-family: var(--font-family-description);
-    font-size: normal;
-    font-weight: 200;
-    text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+  font-size: normal;
+  font-weight: 200;
+  text-decoration: none;
 }
 
 a {
-    font-family: var(--font-family-description);
-    font-size: normal;
-    font-weight: 200;
-    text-decoration: none;
-    color: var(--text-colour);
+  font-family: "Montserrat", sans-serif;
+  font-size: normal;
+  font-weight: 200;
+  text-decoration: none;
+  color: black;
 }
+
 .inactiveLink {
-    pointer-events: none;
-    cursor: default;
+  pointer-events: none;
+  cursor: default;
 }
 
 /*-------------------- CONTAINERS --------------------*/
-
 .hidden {
-    display: none !important;
+  display: none !important;
 }
 
 .container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-    margin: 0 0 1em 0;
-    /* min-height: 100vh;   */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0 0 1em 0;
+  /* min-height: 100vh;   */
 }
+
 .container p {
-    margin: 5px;
-    font-weight: normal;
+  margin: 5px;
+  font-weight: normal;
 }
 
 /*-------------------- TEXT --------------------*/
 .title {
-    font-weight: 500;
-    margin: 0 0 1rem 0;
+  font-weight: 500;
+  margin: 0 0 1rem 0;
 }
 
 .mail {
-    background: linear-gradient(to bottom, var(--mainColor) 0%, var(--mainColor) 100%);
-    background-position: 0 100%;
-    background-repeat: repeat-x;
-    background-size: 0px 0px;
-    color: var(--mainColor);
-    text-decoration: none;
-    font-weight: bold;
-    font-size: xx-large;
-    /* margin: 2rem 0; */
-    transition: background-size 0.2s;
+  background: -webkit-gradient(linear, left top, left bottom, from(#e4ff00), to(#e4ff00));
+  background: linear-gradient(to bottom, #e4ff00 0%, #e4ff00 100%);
+  background-position: 0 100%;
+  background-repeat: repeat-x;
+  background-size: 0px 0px;
+  color: #e4ff00;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: xx-large;
+  /* margin: 2rem 0; */
+  -webkit-transition: background-size 0.2s;
+  transition: background-size 0.2s;
+  text-shadow: 1px 1px #252525;
 }
 
 .mail:hover {
-    background-size: 4px 50px;
-    color: white;
+  background-size: 4px 50px;
+  color: white;
 }
+
 /*---------------------------- MAP ----------------------------*/
 #map {
-    position: absolute;
-    top: 50%;
-    bottom: 0;
-    width: 100%;
-    z-index: 1;
+  position: absolute;
+  top: 50%;
+  bottom: 0;
+  width: 100%;
+  z-index: 1;
 }
 
 .marker {
-    background-image: url("../images/markerC.svg");
-    background-size: cover;
-    width: 50px;
-    height: 50px;
-    /* border-radius: 50%; */
-    cursor: pointer;
-    margin-bottom: 20px;
+  background-image: url("../images/markerC.svg");
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  /* border-radius: 50%; */
+  cursor: pointer;
+  margin-bottom: 20px;
 }
 
 /*-------------------- NAVIGATION MENU --------------------*/
-
 #siteNav ul {
-    text-align: right;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  text-align: right;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 #siteNav ul li {
-    display: inline;
+  display: inline;
 }
 
 #siteNav ul li a {
-    margin-left: 10px;
-    padding: 8px 15px;
-    color: var(--colour-link);
-    /* color: var(--colour-link); */
-    text-decoration: none;
-    /* text-transform: uppercase; */
-    font-size: 1em;
-    transition: all 0.5s;
-    /* border: 1px solid var(--colour-link); */
+  margin-left: 10px;
+  padding: 8px 15px;
+  color: #5a5a5a;
+  /* color: $color-link); */
+  text-decoration: none;
+  /* text-transform: uppercase; */
+  font-size: 1em;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  /* border: 1px solid $color-link); */
 }
 
 #siteNav ul li a:hover {
-    background: var(--color-link);
-    color: var(--color-link-hover);
+  background: #5a5a5a;
+  color: #a3a3a3;
 }
 
 #siteNav ul li a.active {
-    border-bottom: thin;
+  border-bottom: thin;
 }
 
 .navbar {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    z-index: 3;
-    padding: 1rem;
-    background-color: white;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  z-index: 3;
+  padding: 1rem;
+  background-color: white;
 }
+
 .logo {
-    width: 5vw;
-    height: 5vw;
-    padding: 0.5rem;
-    border: 1px solid var(--text-colour);
-    /* margin-left: 1rem; */
-    min-height: 5em;
-    min-width: 5em;
-    max-width: 7em;
-    max-height: 7em;
+  width: 5vw;
+  height: 5vw;
+  padding: 0.5rem;
+  border: 1px solid black;
+  /* margin-left: 1rem; */
+  min-height: 5em;
+  min-width: 5em;
+  max-width: 7em;
+  max-height: 7em;
 }
 
 .logo img {
-    width: 80px;
-    margin-left: 20px;
+  width: 80px;
+  margin-left: 20px;
 }
+
 .menu {
-    display: flex;
-    /* align-items: center; */
-    overflow: hidden;
-    /* flex-grow: 1; */
-    justify-content: flex-end;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  /* align-items: center; */
+  overflow: hidden;
+  /* flex-grow: 1; */
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .menu a {
-    margin: 0 20px;
-    padding: 0 10px;
-    float: left;
-    display: block;
-    color: var(--colour-link);
-    text-align: center;
-    text-decoration: none;
-    font-size: 14px;
-    font-weight: 400;
+  margin: 0 20px;
+  padding: 0 10px;
+  float: left;
+  display: block;
+  color: #5a5a5a;
+  text-align: center;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 .menu a:hover {
-    color: var(--color-link-hover);
+  color: #a3a3a3;
 }
 
 .menu a.active {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .menu .icon {
-    display: none;
-    margin: 0;
+  display: none;
+  margin: 0;
 }
+
 .fa {
-    font-size: x-large !important;
-}
-
-
-@media screen and (max-width: 600px) {
-    .menu a {
-        display: none;
-    }
-    .menu a.icon {
-        float: right;
-        display: flex;
-        /* background-color: var(--highlight-colour); */
-        width: 2rem;
-        height: 2rem;
-        justify-content: center;
-        align-items: center;
-    }
+  font-size: x-large !important;
 }
 
 @media screen and (max-width: 600px) {
-    .menu.responsive {
-        position: relative;
-        flex-direction: column;
-        padding: 0 3rem 0 0;
-        margin-bottom: 1rem;
-    }
-    .menu.responsive .icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-        width: 2rem;
-        height: 2rem;
-        margin-top: 1rem;
-    }
-    .menu.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-        height: auto;
-        margin: 0;
-    }
-    .menu.responsive a:not(:last-child) {
-        margin-top: 0.5rem;
-    }
-    .menu.responsive a:first-child {
-        margin-top: 2rem;
-    }
-
-    .popup {
-        width: 100vw !important;
-        top: 12vh !important;
-        left: 0 !important;
-        height: 88vh !important;
-    }
+  .menu a {
+    display: none;
+  }
+  .menu a.icon {
+    float: right;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    /* background-color: $highlight-colour); */
+    width: 2rem;
+    height: 2rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
+@media screen and (max-width: 600px) {
+  .menu.responsive {
+    position: relative;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0 3rem 0 0;
+    margin-bottom: 1rem;
+  }
+  .menu.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 2rem;
+    height: 2rem;
+    margin-top: 1rem;
+  }
+  .menu.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+    height: auto;
+    margin: 0;
+  }
+  .menu.responsive a:not(:last-child) {
+    margin-top: 0.5rem;
+  }
+  .menu.responsive a:first-child {
+    margin-top: 2rem;
+  }
+  .popup {
+    width: 100vw !important;
+    top: 12vh !important;
+    left: 0 !important;
+    height: 88vh !important;
+  }
+}
 
 /*-------------------- SCROLLBAR --------------------*/
-
 ::-webkit-scrollbar {
-    width: 6px;
+  width: 6px;
 }
 
 ::-webkit-scrollbar-track {
-    background: #ffffff;
-    /* border: 1px solid white; */
+  background: #ffffff;
+  /* border: 1px solid white; */
 }
 
 ::-webkit-scrollbar-thumb {
-    background: rgb(196, 196, 196);
-    border: 1px solid rgb(196, 196, 196);
+  background: #c4c4c4;
+  border: 1px solid #c4c4c4;
 }
 
 div {
-    scrollbar-color: rgb(196, 196, 196) white;
-    scrollbar-width: thin;
-    scrollbar-width: 6px;
+  scrollbar-color: #c4c4c4 white;
+  scrollbar-width: thin;
+  scrollbar-width: 6px;
 }
 
 ::-ms-scrollbar-track {
-    background: #ffffff;
-    /* border: 1px solid white; */
+  background: #ffffff;
+  /* border: 1px solid white; */
 }
 
 ::-ms-scrollbar-thumb {
-    background: rgb(196, 196, 196);
-    /* border: 1px solid white; */
+  background: #c4c4c4;
+  /* border: 1px solid white; */
 }
 
 /*-------------------- SVG LOGO --------------------*/
-
 .cls-1,
 .cls-2,
 .cls-3,
 .cls-5,
 .cls-6 {
-    fill: none;
+  fill: none;
 }
 
 .cls-2,
@@ -415,37 +625,39 @@ div {
 .cls-4,
 .cls-5,
 .cls-6 {
-    stroke: #1a1a1a;
+  stroke: #1a1a1a;
 }
+
 .cls-6:hover {
-    stroke: var(--mainColor);
+  stroke: #e4ff00;
 }
 
 .cls-2 {
-    stroke-linecap: round;
-    stroke-width: 4px;
+  stroke-linecap: round;
+  stroke-width: 4px;
 }
 
 .cls-2,
 .cls-6 {
-    stroke-linejoin: round;
+  stroke-linejoin: round;
 }
 
 .cls-3 {
-    stroke-width: 0.25px;
+  stroke-width: 0.25px;
 }
 
 .cls-4 {
-    fill: #1a1a1a;
-    stroke-miterlimit: 10;
-    stroke-width: 2px;
+  fill: #1a1a1a;
+  stroke-miterlimit: 10;
+  stroke-width: 2px;
 }
+
 .cls-4:hover {
-    fill: var(--mainColor);
-    
+  fill: #e4ff00;
 }
 
 .cls-5,
 .cls-6 {
-    stroke-width: 3px;
+  stroke-width: 3px;
 }
+/*# sourceMappingURL=contact.css.map */
