--- a/DecodeCollective/styles/about.css
+++ b/DecodeCollective/styles/about.css
@@ -42,7 +42,6 @@
           justify-content: space-between;
   z-index: 3;
   padding: 1rem;
-  background-color: rgba(255, 255, 255, 0.685);
   position: fixed;
 }
 
@@ -1365,6 +1364,14 @@ img {
   text-shadow: 2px 2px #252525;
 }
 
+.logo {
+  background: white;
+}
+
+.menu {
+  color: white !important;
+}
+
 .content {
   color: white !important;
   padding: 2vh 10vw 2vh 10vw;
@@ -1382,9 +1389,9 @@ img {
   font-size: 2.5vw;
 }
 
-.coloured-title {
-  color: whitesmoke;
-  font-size: 3vw;
+canvas {
+  display: block;
+  vertical-align: bottom;
 }
 
 canvas {
@@ -1461,5 +1468,15 @@ canvas {
     -webkit-transform: translateY(0);
     transform: translateY(0);
   }
+}
+
+/* ---- tsparticles container ---- */
+#tsparticles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-position: top;
 }
 /*# sourceMappingURL=about.css.map */
